# Django-Recipe-App

./: .env-sample  .gitignore  Dockerfile  Makefile  compose.yaml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  django.yaml  docker-ci.yml  docker-publish.yml  main.yml  sec_test.yaml  test_lint.yml
core/: admin.py  models.py  serializer.py
core/migrations/: 0001_initial.py
core/templates/core/: index.html
core/tests/: test_user.py
nginx/: Dockerfile  nginx.conf
recipe/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
recipe/migrations/: 0001_initial.py  0002_ingredient_recipe_ingredient.py  0003_customer.py  0004_remove_recipe_user.py
recipe/signals/: handlers.py
recipe_api/: asgi.py  settings.py  urls.py  wsgi.py
recipe_api/settings/: common.py  dev.py  prod.py
tags/migrations/: 0001_initial.py
